Add primary authentication foundation
